--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 .jumbotron{
-    background-image: url('./static/images/banner.png');
-    background-size: cover;
-    height: 100%;}
+    background-image: url('./static/images/nasa.jpg');
+    background-size: 100% 100%;
+    text-align: center;
+}
